--- a/events/crypto2030-in-davos/index.html
+++ b/events/crypto2030-in-davos/index.html
@@ -17,32 +17,32 @@
     <meta property="og:site_name" content="SMART-compliance GmbH">
 
 
-    <link rel="apple-touch-icon" sizes="57x57" href="./favicon/apple-icon-57x57.png">
-    <link rel="apple-touch-icon" sizes="60x60" href="./favicon/apple-icon-60x60.png">
-    <link rel="apple-touch-icon" sizes="72x72" href="./favicon/apple-icon-72x72.png">
-    <link rel="apple-touch-icon" sizes="76x76" href="./favicon/apple-icon-76x76.png">
-    <link rel="apple-touch-icon" sizes="114x114" href="./favicon/apple-icon-114x114.png">
-    <link rel="apple-touch-icon" sizes="120x120" href="./favicon/apple-icon-120x120.png">
-    <link rel="apple-touch-icon" sizes="144x144" href="./favicon/apple-icon-144x144.png">
-    <link rel="apple-touch-icon" sizes="152x152" href="./favicon/apple-icon-152x152.png">
-    <link rel="apple-touch-icon" sizes="180x180" href="./favicon/apple-icon-180x180.png">
-    <link rel="icon" type="image/png" sizes="192x192" href="./favicon/android-icon-192x192.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="./favicon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="96x96" href="./favicon/favicon-96x96.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="./favicon/favicon-16x16.png">
+    <link rel="apple-touch-icon" sizes="57x57" href="../../favicon/apple-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="../../favicon/apple-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="../../favicon/apple-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="../../favicon/apple-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="../../favicon/apple-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="../../favicon/apple-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="../../favicon/apple-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="../../favicon/apple-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="../../favicon/apple-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="../../favicon/android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="../../favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="../../favicon/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="../../favicon/favicon-16x16.png">
     <link rel="manifest" href="/manifest.json">
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
 
 
-    <link href="./css/normilize.css" rel="stylesheet">
-    <link href="./css//bootstrap-grid.min.css" rel="stylesheet">
+    <link href="../../css/normilize.css" rel="stylesheet">
+    <link href="../../css//bootstrap-grid.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
     <link href="https://fonts.cdnfonts.com/css/pt-root-ui" rel="stylesheet">
 
-    <link href="./css/style.css" rel="stylesheet">
-    <link href="./css/media.css" rel="stylesheet">
+    <link href="../../css/style.css" rel="stylesheet">
+    <link href="../../css/media.css" rel="stylesheet">
 </head>
 
 <body>
@@ -51,40 +51,40 @@
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-xl-3 col-6">
-                    <a href="./index.html" class="header__logo">
-                        <img src="./img/logo-white.svg" alt="Logo SMART-compliance">
+                    <a href="../../index.html" class="header__logo">
+                        <img src="../../img/logo-white.svg" alt="Logo SMART-compliance">
                     </a>
                 </div>
                 <div class="col-xl-9 col-6 flex header__content">
                     <nav class="header__nav">
                         <ul class="header__nav-list list-reset flex">
                             <li class="nav__item">
-                                <a href="./index.html" class="nav__link">
+                                <a href="../../index.html" class="nav__link">
                                     Home
                                 </a>
                             </li>
                             <li class="nav__item">
-                                <a href="./about.html" class="nav__link">
+                                <a href="../../about/index.html" class="nav__link">
                                     About
                                 </a>
                             </li>
                             <li class="nav__item">
-                                <a href="./content-corner.html" class="nav__link">
+                                <a href="../../content-corner/index.html" class="nav__link">
                                     Content Corner
                                 </a>
                             </li>
                             <li class="nav__item">
-                                <a href="./educational-portal.html" class="nav__link">
+                                <a href="../../educational-portal/index.html" class="nav__link">
                                     Educational Portal
                                 </a>
                             </li>
                             <li class="nav__item">
-                                <a href="./events.html" class="nav__link">
+                                <a href="../../events/index.html" class="nav__link">
                                     Events
                                 </a>
                             </li>
                             <li class="nav__item">
-                                <a href="./contact.html" class="nav__link">
+                                <a href="../../contact/index.html" class="nav__link">
                                     Contact
                                 </a>
                             </li>
@@ -108,115 +108,67 @@
 
         <section class="hero">
             <video id="background-video" class="hero__video" autoplay loop muted>
-                <source src="./animation/s-compl_1.mp4" type="video/mp4">
+                <source src="../../animation/s-compl_1.mp4" type="video/mp4">
             </video>
             <div class="container hero__container">
                 <div class="row">
                     <div class="col-xl-4 col-md-6 col-sm-7 hero__content">
                         <div class="hero__info pages__hero flex">
-                            <h1 class="hero__heading about__heading pages__heading">
+                            <h1 class="hero__heading content-corner__heading pages__heading">
                                 Events
                             </h1>
-
                         </div>
                     </div>
                 </div>
             </div>
         </section>
 
-        <section class="events section__global">
+        <section class="content-corner section__global">
             <div class="container">
                 <div class="row">
-                    <div class="offset-2 col-8">
-                        <p class="events__descr descr__global">
-                            Welcome to&nbsp;the <b class="text_bold">
-                                SMART-compliance&rsquo;s Events Page!</b> Explore a&nbsp;world of&nbsp;industry-leading gatherings where we&nbsp;connect, learn, and innovate. Our commitment to&nbsp;supporting start-ups and businesses in&nbsp;navigating regulatory standards is&nbsp;exemplified through our participation in&nbsp;key events.
-                        </p>
-                    </div>
-                </div>
 
-                <h2 class="events__heading heading__global">
-                    Upcoming events
-                </h2>
-
-                <div class="row upcoming-events__row">
-                    <div class="col-xl-8 offset-xl-2 col-12">
-
-                        <h3 class="events-preview__heading subtitle__global text-center">
-                            Currently, there are no upcoming events
-                        </h3>
-                        <p class="events-preview__descr descr__global text-center">
-                            Please check back later for updates or <b class="text_bold"><a href="http://eepurl.com/ioqyWo" target="_blank" class="subscription-link__body">subscribe to our newsletter</a></b>  to receive notifications about future events </p>
+                    <div class="col-12">
+                        <h2 class="events-item__heading heading__global">
+                            SMART-compliance partners with CRYPTO2030 in Davos
+                        </h2>
                     </div>
 
+
                 </div>
+                <div class="row events-item__row">
+                    <div class="col-12">
+                        <div class="events-item__wrapper">
 
-                <h2 class="events__heading heading__global">
-                    Past events
-                </h2>
 
-                <div class="row">
-                    <div class="col-xl-8 offset-xl-2 col-12">
-                        <ul class="events-list list-reset">
 
-                            <li class="events-item">
-                                <article class="events-preview">
-                                    <a href="./events/crypto2030-in-davos.html" class="events-preview__link">
-                                        <img class="events-preview__image" src="./img/events-preview-1.png" alt="Events preview image">
-                                        <div class="events-preview__text">
-                                            <h3 class="events-preview__heading subtitle__global">
-                                                SMART-compliance partners with CRYPTO2030
-                                            </h3>
-                                            <p class="events-preview__descr descr__global">
-                                                SMART-compliance GmbH is&nbsp;proud to&nbsp;announce our partnership with the CRYPTO2030, taking place in&nbsp;Davos, Switzerland from January 15th to&nbsp;19th, 2024. As&nbsp;a&nbsp;leading company in&nbsp;Switzerland, specializing in&nbsp;helping entrepreneurs obtain the necessary permits to&nbsp;run their businesses, we&nbsp;are excited to&nbsp;join forces with CRYPTO2030 in&nbsp;advancing the future of&nbsp;Web3.
-                                            </p>
-                                        </div>
-                                    </a>
-                                </article>
-                            </li>
+                            <a href="https://www.wcf2030.org" class="events-item__link">
+                                <img src="../../img/crypto2030.svg" alt="CRYPTO2030 logo">
+                            </a>
 
-                        </ul>
+                            <p class="descr__global events-item__descr">
+                                SMART-compliance GmbH is&nbsp;proud to&nbsp;announce our partnership with CRYPTO2030, taking place in&nbsp;Davos, Switzerland from January 15th to&nbsp;19th, 2024. As&nbsp;a&nbsp;leading company in&nbsp;Switzerland, specializing in&nbsp;helping entrepreneurs obtain the necessary permits to&nbsp;run their businesses, we&nbsp;are excited to&nbsp;join forces with CRYPTO2030 in&nbsp;advancing the future of&nbsp;Web3. </p>
+                            <p class="descr__global events-item__descr">
+                                CRYPTO2030 in&nbsp;Davos is&nbsp;a&nbsp;landmark event for the blockchain and crypto community, bringing together innovators, entrepreneurs, and thought leaders from around the world to&nbsp;UNITE, INNOVATE, and TRANSFORM the landscape of&nbsp;Web3&nbsp;technologies. With a&nbsp;lineup of&nbsp;distinguished speakers and industry experts, this event promises to&nbsp;be&nbsp;a&nbsp;gathering of&nbsp;immense value. </p>
+                            <p class="descr__global events-item__descr">
+                                <b class="text_bold">Ekaterina Anthony, CEO and Board Member of&nbsp;SMART-compliance GmbH, will be&nbsp;a&nbsp;featured speaker and moderator</b> at&nbsp;the event, sharing insights and expertise on&nbsp;regulatory compliance and its critical role in&nbsp;the blockchain and crypto industry.
+                            </p>
+
+                            <a href="https://www.wcf2030.org" class="learn__link events-item__link">
+                                Learn more
+                            </a>
+
+                            <img class="events-item__img" src="../../img/events-preview-1.jpeg" alt="Events picture">
+
+                        </div>
                     </div>
+
                 </div>
+
+
+
 
             </div>
         </section>
-
-        <!-- <section class="past-events section__global">
-            <div class="container">
-
-
-                <h2 class="events__heading heading__global">
-                    Past events
-                </h2>
-
-                <div class="row">
-                    <div class="col-xl-8 offset-xl-2 col-12">
-                        <ul class="events-list list-reset">
-
-                            <li class="events-item">
-                                <article class="events-preview">
-                                    <a href="#" class="events-preview__link">
-                                        <img class="events-preview__image" src="./img/events-preview-1.png" alt="Events preview image">
-                                        <div class="events-preview__text">
-                                            <h3 class="events-preview__heading subtitle__global">
-                                                SMART-compliance partners with World Crypto Forum in&nbsp;Davos
-                                            </h3>
-                                            <p class="events-preview__descr descr__global">
-                                                SMART-compliance GmbH is&nbsp;proud to&nbsp;announce our partnership with the World Crypto Forum, taking place in&nbsp;Davos, Switzerland from January 15th to&nbsp;19th, 2024. As&nbsp;a&nbsp;leading company in&nbsp;Switzerland, specializing in&nbsp;helping entrepreneurs obtain the necessary permits to&nbsp;run their businesses, we&nbsp;are excited to&nbsp;join forces with the World Crypto Forum in&nbsp;advancing the future of&nbsp;Web3.
-                                            </p>
-                                        </div>
-                                    </a>
-                                </article>
-                            </li>
-
-                            
-                        </ul>
-
-                    </div>
-                </div>
-            </div>
-        </section> -->
 
 
 
@@ -226,8 +178,8 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-4 col-6 logo-wrapper">
-                        <a href="./index.html" class="footer__logo">
-                            <img src="./img/logo-white.svg" alt="Logo SMART-compliance">
+                        <a href="../../index.html" class="footer__logo">
+                            <img src="../../img/logo-white.svg" alt="Logo SMART-compliance">
                         </a>
                     </div>
                 </div>
@@ -267,37 +219,37 @@
                         <nav class="footer__nav">
                             <ul class="footer__list list-reset">
                                 <li class="footer__item">
-                                    <a href="./index.html" class="footer__link nav__link">
+                                    <a href="../../index.html" class="footer__link nav__link">
                                         Home
                                     </a>
                                 </li>
                                 <li class="footer__item">
-                                    <a href="./about.html" class="footer__link nav__link">
+                                    <a href="../../about/index.html" class="footer__link nav__link">
                                         About
                                     </a>
                                 </li>
                                 <li class="footer__item">
-                                    <a href="./content-corner.html" class="footer__link nav__link">
+                                    <a href="../../content-corner/index.html" class="footer__link nav__link">
                                         Content Corner
                                     </a>
                                 </li>
                                 <li class="footer__item">
-                                    <a href="./educational-portal.html" class="footer__link nav__link">
+                                    <a href="../../educational-portal/index.html" class="footer__link nav__link">
                                         Educational portal
                                     </a>
                                 </li>
                                 <li class="footer__item">
-                                    <a href="./events.html" class="footer__link nav__link">
+                                    <a href="../../events/index.html" class="footer__link nav__link">
                                         Events
                                     </a>
                                 </li>
                                 <li class="footer__item">
-                                    <a href="./contact.html" class="footer__link nav__link">
+                                    <a href="../../contact/index.html" class="footer__link nav__link">
                                         Contact
                                     </a>
                                 </li>
                                 <li class="footer__item">
-                                    <a href="./data-privacy.html" class="footer__link nav__link">
+                                    <a href="../../data-privacy/index.html" class="footer__link nav__link">
                                         Data Privacy Policy
                                     </a>
                                 </li>
@@ -313,7 +265,7 @@
     <script type="text/javascript">(function ($) { window.fnames = new Array(); window.ftypes = new Array(); fnames[0] = 'EMAIL'; ftypes[0] = 'email'; fnames[1] = 'FNAME'; ftypes[1] = 'text'; fnames[2] = 'LNAME'; ftypes[2] = 'text'; fnames[3] = 'ADDRESS'; ftypes[3] = 'address'; fnames[4] = 'PHONE'; ftypes[4] = 'phone'; fnames[5] = 'BIRTHDAY'; ftypes[5] = 'birthday'; }(jQuery)); var $mcj = jQuery.noConflict(true);</script>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
-    <script src="./js/index.js"></script>
+    <script src="../../js/index.js"></script>
 </body>
 
 </html>
