--- a/index.html
+++ b/index.html
@@ -67,27 +67,27 @@
                                 </a>
                             </li>
                             <li class="nav__item">
-                                <a href="./about.html" class="nav__link">
+                                <a href="./about/index.html" class="nav__link">
                                     About
                                 </a>
                             </li>
                             <li class="nav__item">
-                                <a href="./content-corner.html" class="nav__link">
+                                <a href="./content-corner/index.html" class="nav__link">
                                     Content Corner
                                 </a>
                             </li>
                             <li class="nav__item">
-                                <a href="./educational-portal.html" class="nav__link">
+                                <a href="./educational-portal/index.html" class="nav__link">
                                     Educational Portal
                                 </a>
                             </li>
                             <li class="nav__item">
-                                <a href="./events.html" class="nav__link">
+                                <a href="./events/index.html" class="nav__link">
                                     Events
                                 </a>
                             </li>
                             <li class="nav__item">
-                                <a href="./contact.html" class="nav__link">
+                                <a href="./contact/index.html" class="nav__link">
                                     Contact
                                 </a>
                             </li>
@@ -205,13 +205,13 @@
                                 </div>
                                 <div class="swiper-slide slide-2">
                                     <div class="swiper__content">
-                                        <a href="./content-corner.html" class="swiper__section-link">BLOG</a>
+                                        <a href="./content-corner/index.html" class="swiper__section-link">BLOG</a>
                                         <h3 class="swiper__heading heading__global">
-                                            <a class="swiper__heading-link" href="./blog/crypto2030-recap.html" target="_blank">
+                                            <a class="swiper__heading-link" href="./blog/crypto2030-recap/index.html" target="_blank">
                                                 CRYPTO2030 in&nbsp;Davos: A&nbsp;Recap of&nbsp;Uniting, Innovating, and Transforming the Web3 Landscape </a>
 
                                         </h3>
-                                        <a href="./events/crypto2030-in-davos.html" target="_blank" class="swiper__link">Read more</a>
+                                        <a href="./events/crypto2030-in-davos/index.html" target="_blank" class="swiper__link">Read more</a>
                                     </div>
                                 </div>
                                 <div class="swiper-slide slide-3">
@@ -227,24 +227,24 @@
                                 </div>
                                 <div class="swiper-slide slide-4">
                                     <div class="swiper__content">
-                                        <a href="./content-corner.html" class="swiper__section-link">BLOG</a>
+                                        <a href="./content-corner/index.html" class="swiper__section-link">BLOG</a>
                                         <h3 class="swiper__heading heading__global">
-                                            <a class="swiper__heading-link" href="./blog/new-challenges-and-cross-border-transactions.html" _blank">
+                                            <a class="swiper__heading-link" href="./blog/new-challenges-and-cross-border-transactions/index.html" _blank">
                                                 New challenges and cross-border transactions
                                             </a>
                                         </h3>
-                                        <a href="./blog/new-challenges-and-cross-border-transactions.html" target="_blank" class="swiper__link">Read more</a>
+                                        <a href="./blog/new-challenges-and-cross-border-transactions/index.html" target="_blank" class="swiper__link">Read more</a>
                                     </div>
                                 </div>
                                 <div class="swiper-slide slide-5">
                                     <div class="swiper__content">
-                                        <a href="./content-corner.html" class="swiper__section-link">BLOG</a>
+                                        <a href="./content-corner/index.html" class="swiper__section-link">BLOG</a>
                                         <h3 class="swiper__heading heading__global">
-                                            <a class="swiper__heading-link" href="./blog/work-and-residence-permit-in-switzerland.html" target="_blank">
+                                            <a class="swiper__heading-link" href="./blog/work-and-residence-permit-in-switzerland/index.html" target="_blank">
                                                 Work and residence permit in Switzerland
                                             </a>
                                         </h3>
-                                        <a href="./blog/work-and-residence-permit-in-switzerland.html" target="_blank" class="swiper__link">Read more</a>
+                                        <a href="./blog/work-and-residence-permit-in-switzerland/index.html" target="_blank" class="swiper__link">Read more</a>
                                     </div>
                                 </div>
                                 <div class="swiper-slide slide-6">
@@ -551,7 +551,7 @@
                             <p class="learn__descr descr__global">
                                 Visit our blog for latest news &amp;&nbsp;insights
                             </p>
-                            <a href="./content-corner.html" class="learn__link">
+                            <a href="./content-corner/index.html" class="learn__link">
                                 See more
                             </a>
                         </div>
@@ -564,7 +564,7 @@
                             <p class="learn__descr descr__global">
                                 Stay informed about our webinars, educational materials, and special offers
                             </p>
-                            <a href="./educational-portal.html" class="learn__link">
+                            <a href="./educational-portal/index.html" class="learn__link">
                                 See more
                             </a>
                         </div>
@@ -576,7 +576,7 @@
                             </h3>
                             <p class="learn__descr descr__global">
                                 Explore the latest events and find out where we&rsquo;re making waves in&nbsp;the industry </p>
-                            <a href="./events.html" class="learn__link">
+                            <a href="./events/index.html" class="learn__link">
                                 See more
                             </a>
                         </div>
@@ -645,32 +645,32 @@
                                     </a>
                                 </li>
                                 <li class="footer__item">
-                                    <a href="./about.html" class="footer__link nav__link">
+                                    <a href="./about/index.html" class="footer__link nav__link">
                                         About
                                     </a>
                                 </li>
                                 <li class="footer__item">
-                                    <a href="./content-corner.html" class="footer__link nav__link">
+                                    <a href="./content-corner/index.html" class="footer__link nav__link">
                                         Content Corner
                                     </a>
                                 </li>
                                 <li class="footer__item">
-                                    <a href="./educational-portal.html" class="footer__link nav__link">
+                                    <a href="./educational-portal/index.html" class="footer__link nav__link">
                                         Educational portal
                                     </a>
                                 </li>
                                 <li class="footer__item">
-                                    <a href="./events.html" class="footer__link nav__link">
+                                    <a href="./events/index.html" class="footer__link nav__link">
                                         Events
                                     </a>
                                 </li>
                                 <li class="footer__item">
-                                    <a href="./contact.html" class="footer__link nav__link">
+                                    <a href="./contact/index.html class="footer__link nav__link">
                                         Contact
                                     </a>
                                 </li>
                                 <li class="footer__item">
-                                    <a href="./data-privacy.html" class="footer__link nav__link">
+                                    <a href="./data-privacy/index.html" class="footer__link nav__link">
                                         Data Privacy Policy
                                     </a>
                                 </li>
