--- a/data-privacy/index.html
+++ b/data-privacy/index.html
@@ -17,32 +17,32 @@
     <meta property="og:site_name" content="SMART-compliance GmbH">
 
 
-    <link rel="apple-touch-icon" sizes="57x57" href="./favicon/apple-icon-57x57.png">
-    <link rel="apple-touch-icon" sizes="60x60" href="./favicon/apple-icon-60x60.png">
-    <link rel="apple-touch-icon" sizes="72x72" href="./favicon/apple-icon-72x72.png">
-    <link rel="apple-touch-icon" sizes="76x76" href="./favicon/apple-icon-76x76.png">
-    <link rel="apple-touch-icon" sizes="114x114" href="./favicon/apple-icon-114x114.png">
-    <link rel="apple-touch-icon" sizes="120x120" href="./favicon/apple-icon-120x120.png">
-    <link rel="apple-touch-icon" sizes="144x144" href="./favicon/apple-icon-144x144.png">
-    <link rel="apple-touch-icon" sizes="152x152" href="./favicon/apple-icon-152x152.png">
-    <link rel="apple-touch-icon" sizes="180x180" href="./favicon/apple-icon-180x180.png">
-    <link rel="icon" type="image/png" sizes="192x192" href="./favicon/android-icon-192x192.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="./favicon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="96x96" href="./favicon/favicon-96x96.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="./favicon/favicon-16x16.png">
+    <link rel="apple-touch-icon" sizes="57x57" href="../favicon/apple-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="../favicon/apple-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="../favicon/apple-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="../favicon/apple-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="../favicon/apple-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="../favicon/apple-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="../favicon/apple-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="../favicon/apple-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="../favicon/apple-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="../favicon/android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="../favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="../favicon/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="../favicon/favicon-16x16.png">
     <link rel="manifest" href="/manifest.json">
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
 
 
-    <link href="./css/normilize.css" rel="stylesheet">
-    <link href="./css//bootstrap-grid.min.css" rel="stylesheet">
+    <link href="../css/normilize.css" rel="stylesheet">
+    <link href="../css//bootstrap-grid.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
     <link href="https://fonts.cdnfonts.com/css/pt-root-ui" rel="stylesheet">
 
-    <link href="./css/style.css" rel="stylesheet">
-    <link href="./css/media.css" rel="stylesheet">
+    <link href="../css/style.css" rel="stylesheet">
+    <link href="../css/media.css" rel="stylesheet">
 </head>
 
 <body>
@@ -51,40 +51,40 @@
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-xl-3 col-6">
-                    <a href="./index.html" class="header__logo">
-                        <img src="./img/logo-white.svg" alt="Logo SMART-compliance">
+                    <a href="../index.html" class="header__logo">
+                        <img src="../img/logo-white.svg" alt="Logo SMART-compliance">
                     </a>
                 </div>
                 <div class="col-xl-9 col-6 flex header__content">
                     <nav class="header__nav">
                         <ul class="header__nav-list list-reset flex">
                             <li class="nav__item">
-                                <a href="./index.html" class="nav__link">
+                                <a href="../index.html" class="nav__link">
                                     Home
                                 </a>
                             </li>
                             <li class="nav__item">
-                                <a href="./about.html" class="nav__link">
+                                <a href="../about/index.html" class="nav__link">
                                     About
                                 </a>
                             </li>
                             <li class="nav__item">
-                                <a href="./content-corner.html" class="nav__link">
+                                <a href="../content-corner/index.html" class="nav__link">
                                     Content Corner
                                 </a>
                             </li>
                             <li class="nav__item">
-                                <a href="./educational-portal.html" class="nav__link">
+                                <a href="../educational-portal/index.html" class="nav__link">
                                     Educational Portal
                                 </a>
                             </li>
                             <li class="nav__item">
-                                <a href="./events.html" class="nav__link">
+                                <a href="../events/index.html" class="nav__link">
                                     Events
                                 </a>
                             </li>
                             <li class="nav__item">
-                                <a href="./contact.html" class="nav__link">
+                                <a href="../contact/index.html" class="nav__link">
                                     Contact
                                 </a>
                             </li>
@@ -108,7 +108,7 @@
 
         <section class="hero">
             <video id="background-video" class="hero__video" autoplay loop muted>
-                <source src="./animation/s-compl_1.mp4" type="video/mp4">
+                <source src="../animation/s-compl_1.mp4" type="video/mp4">
             </video>
             <div class="container hero__container">
                 <div class="row">
@@ -268,11 +268,6 @@
                             For more information about the purpose and scope of&nbsp;data collection and processing by&nbsp;the above-mentioned social media networks and your respective rights and privacy options, please refer to&nbsp;the privacy policies of&nbsp;LinkedIn and Twitter.
                         </p>
 
-
-
-
-
-
                         <p class="descr__global data-privacy__descr">
                             <b class="text_bold">
                                 9. International Data Transfers
@@ -323,8 +318,8 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-4 col-6 logo-wrapper">
-                        <a href="./index.html" class="footer__logo">
-                            <img src="./img/logo-white.svg" alt="Logo SMART-compliance">
+                        <a href="../index.html" class="footer__logo">
+                            <img src="../img/logo-white.svg" alt="Logo SMART-compliance">
                         </a>
                     </div>
                 </div>
@@ -364,37 +359,37 @@
                         <nav class="footer__nav">
                             <ul class="footer__list list-reset">
                                 <li class="footer__item">
-                                    <a href="./index.html" class="footer__link nav__link">
+                                    <a href="../index.html" class="footer__link nav__link">
                                         Home
                                     </a>
                                 </li>
                                 <li class="footer__item">
-                                    <a href="./about.html" class="footer__link nav__link">
+                                    <a href="../about/index.html" class="footer__link nav__link">
                                         About
                                     </a>
                                 </li>
                                 <li class="footer__item">
-                                    <a href="./content-corner.html" class="footer__link nav__link">
+                                    <a href="../content-corner/index.html" class="footer__link nav__link">
                                         Content Corner
                                     </a>
                                 </li>
                                 <li class="footer__item">
-                                    <a href="./educational-portal.html" class="footer__link nav__link">
+                                    <a href="../educational-portal/index.html" class="footer__link nav__link">
                                         Educational portal
                                     </a>
                                 </li>
                                 <li class="footer__item">
-                                    <a href="./events.html" class="footer__link nav__link">
+                                    <a href="../events/index.html" class="footer__link nav__link">
                                         Events
                                     </a>
                                 </li>
                                 <li class="footer__item">
-                                    <a href="./contact.html" class="footer__link nav__link">
+                                    <a href="../contact/index.html" class="footer__link nav__link">
                                         Contact
                                     </a>
                                 </li>
                                 <li class="footer__item">
-                                    <a href="./data-privacy.html" class="footer__link nav__link">
+                                    <a href="./index.html" class="footer__link nav__link">
                                         Data Privacy Policy
                                     </a>
                                 </li>
@@ -410,7 +405,7 @@
     <script type="text/javascript">(function ($) { window.fnames = new Array(); window.ftypes = new Array(); fnames[0] = 'EMAIL'; ftypes[0] = 'email'; fnames[1] = 'FNAME'; ftypes[1] = 'text'; fnames[2] = 'LNAME'; ftypes[2] = 'text'; fnames[3] = 'ADDRESS'; ftypes[3] = 'address'; fnames[4] = 'PHONE'; ftypes[4] = 'phone'; fnames[5] = 'BIRTHDAY'; ftypes[5] = 'birthday'; }(jQuery)); var $mcj = jQuery.noConflict(true);</script>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
-    <script src="./js/index.js"></script>
+    <script src="../js/index.js"></script>
 </body>
 
 </html>
