new articles added

--- a/about/index.html
+++ b/about/index.html
@@ -201,32 +201,46 @@
                 <h2 class="our-partners__heading heading__global">
                     Our Partners
                 </h2>
-                <div class="row align-items-center">
-                    <div class="col-md-3 col-12 our-partners__col">
+                <div class="row align-items-center justify-content-center gy-5">
+                    <div class="col-md-4 col-12 our-partners__col">
                         <div class="our-partners__wrapper">
                             <a href="https://cryptovalley.swiss" class="our-partners__link" target="_blank">
                                 <img src="../img/partner1.png" alt="partner1">
                             </a>
                         </div>
                     </div>
-                    <div class="col-md-3 col-12 our-partners__col">
+                    <div class="col-md-4 col-12 our-partners__col">
                         <div class="our-partners__wrapper">
                             <a href="https://www.21analytics.ch/" class="our-partners__link" target="_blank">
                                 <img src="../img/partner2.png" alt="partner2">
                             </a>
                         </div>
                     </div>
-                    <div class="col-md-3 col-12 our-partners__col">
+                    <div class="col-md-4 col-12 our-partners__col">
                         <div class="our-partners__wrapper">
                             <a href="https://gatenox.com/" class="our-partners__link" target="_blank">
                                 <img src="../img/partner3.png" alt="partner3">
                             </a>
                         </div>
                     </div>
-                    <div class="col-md-3 col-12 our-partners__col">
+                    <div class="col-md-4 col-12 our-partners__col">
                         <div class="our-partners__wrapper">
                             <a href="https://zazoon.com" class="our-partners__link" target="_blank">
-                                <img src="../img/partner4.svg" alt="partner3">
+                                <img src="../img/partner4.svg" alt="partner4">
+                            </a>
+                        </div>
+                    </div>
+                    <div class="col-md-4 col-12 our-partners__col">
+                        <div class="our-partners__wrapper">
+                            <a href="https://sumsub.com" class="our-partners__link" target="_blank">
+                                <img src="../img/partner5.png" alt="partner5">
+                            </a>
+                        </div>
+                    </div>
+                    <div class="col-md-4 col-12 our-partners__col">
+                        <div class="our-partners__wrapper">
+                            <a href="https://www.nodegate.io/" class="our-partners__link" target="_blank">
+                                <img src="../img/partner6.jpeg" alt="partner5">
                             </a>
                         </div>
                     </div>
