--- a/index.html
+++ b/index.html
@@ -191,19 +191,44 @@
                     <div class="col-12">
                         <div class="swiper">
                             <div class="swiper-wrapper">
+
                                 <div class="swiper-slide slide-1">
+                                    <div class="swiper__content">
+                                        <a href="./content-corner/index.html" class="swiper__section-link">BLOG</a>
+                                        <h3 class="swiper__heading heading__global">
+                                            <a class="swiper__heading-link" href="./blog/airdrop/index.html" _blank">
+                                                Airdrop — What to Consider
+                                            </a>
+                                        </h3>
+                                        <a href="./blog/airdrop/index.html" target="_blank" class="swiper__link">Read more</a>
+                                    </div>
+                                </div>
+
+                                <div class="swiper-slide slide-2">
+                                    <div class="swiper__content">
+                                        <a href="./content-corner/index.html" class="swiper__section-link">BLOG</a>
+                                        <h3 class="swiper__heading heading__global">
+                                            <a class="swiper__heading-link" href="./blog/how-tokens-project-can-survive-under-mica/index.html" _blank">
+                                                How Tokens Project Can Survive Under MiCA
+                                            </a>
+                                        </h3>
+                                        <a href="./blog/how-tokens-project-can-survive-under-mica/index.html" target="_blank" class="swiper__link">Read more</a>
+                                    </div>
+                                </div>
+
+                                <div class="swiper-slide slide-3">
                                     <div class="swiper__content">
                                         <a href="https://youtu.be/ZTYX4GZhpdA?si=_zivaED0NREY-Ryp" class="swiper__section-link">PODCAST</a>
                                         <h3 class="swiper__heading heading__global">
                                             <a class="swiper__heading-link" href="https://youtu.be/ZTYX4GZhpdA?si=_zivaED0NREY-Ryp" target="_blank">
                                                 Join our moderator, Ekaterina Anthony, and the panelists as they explore the regulatory landscape in the crypto world
                                             </a>
-
                                         </h3>
                                         <a href="https://youtu.be/ZTYX4GZhpdA?si=_zivaED0NREY-Ryp" target="_blank" class="swiper__link">Read more</a>
                                     </div>
                                 </div>
-                                <div class="swiper-slide slide-2">
+
+                                <div class="swiper-slide slide-4">
                                     <div class="swiper__content">
                                         <a href="./content-corner/index.html" class="swiper__section-link">BLOG</a>
                                         <h3 class="swiper__heading heading__global">
@@ -214,7 +239,8 @@
                                         <a href="./events/crypto2030-in-davos/index.html" target="_blank" class="swiper__link">Read more</a>
                                     </div>
                                 </div>
-                                <div class="swiper-slide slide-3">
+
+                                <div class="swiper-slide slide-5">
                                     <div class="swiper__content">
                                         <a href="https://cointelegraph.com/press-releases/crypto2030-a-convergence-of-elite-minds-in-davos" class="swiper__section-link">PRESS RELEASE</a>
                                         <h3 class="swiper__heading heading__global">
@@ -225,7 +251,8 @@
                                         <a href="https://cointelegraph.com/press-releases/crypto2030-a-convergence-of-elite-minds-in-davos" target="_blank" class="swiper__link">Read more</a>
                                     </div>
                                 </div>
-                                <div class="swiper-slide slide-4">
+
+                                <div class="swiper-slide slide-6">
                                     <div class="swiper__content">
                                         <a href="./content-corner/index.html" class="swiper__section-link">BLOG</a>
                                         <h3 class="swiper__heading heading__global">
@@ -236,7 +263,8 @@
                                         <a href="./blog/new-challenges-and-cross-border-transactions/index.html" target="_blank" class="swiper__link">Read more</a>
                                     </div>
                                 </div>
-                                <div class="swiper-slide slide-5">
+
+                                <div class="swiper-slide slide-7">
                                     <div class="swiper__content">
                                         <a href="./content-corner/index.html" class="swiper__section-link">BLOG</a>
                                         <h3 class="swiper__heading heading__global">
@@ -247,7 +275,8 @@
                                         <a href="./blog/work-and-residence-permit-in-switzerland/index.html" target="_blank" class="swiper__link">Read more</a>
                                     </div>
                                 </div>
-                                <div class="swiper-slide slide-6">
+
+                                <div class="swiper-slide slide-8">
                                     <div class="swiper__content">
                                         <a href="https://smartcompliance.podia.com/creating-legal-entity-in-switzerland-2023" class="swiper__section-link">WEBINAR</a>
                                         <h3 class="swiper__heading heading__global">
